# robot-arm-rrt-obstacle-avoidance

./: .gitignore  LICENSE  README.md
src/manipulator-rrt/controller/: CMakeLists.txt  controller_plugins.xml  package.xml
src/manipulator-rrt/controller/cfg/: PassivityControllerParams.cfg
src/manipulator-rrt/controller/include/utils/: helpers.h  rrt.h
src/manipulator-rrt/controller/msg/: ControllerJointState.msg
src/manipulator-rrt/controller/src/: manipulator_controller.cpp
src/manipulator-rrt/controller/src/course_exercises/: rrt.cpp  workspace_multipoint_obstacle_avoidance.cpp  workspace_obstacle_avoidance.cpp
src/manipulator-rrt/elfin/elfin_control/: CMakeLists.txt  package.xml
src/manipulator-rrt/elfin/elfin_control/config/: manipulator_controller.yaml
src/manipulator-rrt/elfin/elfin_control/config/course_exercises/: workspace_multipoint_obstacle_avoidance.yaml  workspace_obstacle_avoidance.yaml
src/manipulator-rrt/elfin/elfin_control/launch/: adaptive_impedance_control.launch  computed_torque_control.launch  computed_torque_control_clik.launch  gravity_comp_control.launch  manipulator_controller.launch  passivity_control.launch  rqt_plot.launch  table.lauch  time_delay_control.launch
src/manipulator-rrt/elfin/elfin_control/launch/course_exercises/: gravitation_compensation.launch  joint_limit_avoidance.launch  kinematic_controller.launch  kinematic_task_space_controller.launch  task_space_controller.launch  visual_servoing_controller.launch  workspace_multipoint_obstacle_avoidance.launch  workspace_obstacle_avoidance.launch
src/manipulator-rrt/elfin/elfin_control/launch/gravity_comp_control_perspective/: joint1_effort.perspective  joint1_error.perspective  joint1_state.perspective  joint2_effort.perspective  joint2_error.perspective  joint2_state.perspective  joint3_effort.perspective  joint3_error.perspective  joint3_state.perspective  joint4_effort.perspective  joint4_error.perspective  joint4_state.perspective  joint5_effort.perspective  joint5_error.perspective  joint5_state.perspective  joint6_effort.perspective  joint6_error.perspective  joint6_state.perspective  tuning.perspective
src/manipulator-rrt/elfin/elfin_control/launch/passivity_control_perspective/: joint1_effort.perspective  joint1_error.perspective  joint1_state.perspective  joint2_effort.perspective  joint2_error.perspective  joint2_state.perspective  joint3_effort.perspective  joint3_error.perspective  joint3_state.perspective  joint4_effort.perspective  joint4_error.perspective  joint4_state.perspective  joint5_effort.perspective  joint5_error.perspective  joint5_state.perspective  joint6_effort.perspective  joint6_error.perspective  joint6_state.perspective  tuning.perspective
src/manipulator-rrt/elfin/elfin_control/launch/time_delay_control_perspective/: joint1_error.perspective  joint1_state.perspective  joint2_error.perspective  joint2_state.perspective  joint3_error.perspective  joint3_state.perspective  joint4_error.perspective  joint4_state.perspective  joint5_error.perspective  joint5_state.perspective  joint6_error.perspective  joint6_state.perspective
src/manipulator-rrt/elfin/elfin_description/: package.xml
src/manipulator-rrt/elfin/elfin_description/urdf/: elfin3.urdf.xacro  elfin3_Q_spheres.urdf.xacro  elfin_robot.gazebo  elfin_transmission.xacro
src/manipulator-rrt/elfin/elfin_gazebo/: CMakeLists.txt  package.xml
src/manipulator-rrt/elfin/elfin_gazebo/launch/: elfin3_empty_world.launch
src/manipulator-rrt/elfin/elfin_launch/: CMakeLists.txt  package.xml
src/manipulator-rrt/elfin/elfin_launch/launch/: manipulator_controller.launch
src/manipulator-rrt/elfin/elfin_launch/launch/course_exercises/: workspace_multipoint_obstacle_avoidance.launch  workspace_obstacle_avoidance.launch
src/manipulator-rrt/elfin/elfin_launch/rviz/: manipulator_controller.rviz  workspace_obstacle_avoidance.rviz
src/rrt_solver/: CMakeLists.txt  config.yaml  package.xml
src/rrt_solver/include/rrt_solver/: rrt_solver.h
src/rrt_solver/launch/: gtest.test  node_only.launch  rrt.launch
src/rrt_solver/nodes/: rrt_node.cpp
src/rrt_solver/src/: rrt_solver.cpp
src/rrt_solver/tests/: tests_1.cpp  tests_2.cpp
src/rrt_solver/tests/urdf/: elfin_no_control_points.urdf
