<?xml version="1.0"?>
<package>
  <name>elfin_control</name>
  <version>0.0.2</version>
  <description>The elfin_control package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>arm_controllers</run_depend>
</package>
